log/build_2026-03-16_17-37-11/my_first_package/stderr.log
  File "/home/kyujin/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/dist_turtle_action_server.py", line 39
    		self.almosts_time almosts_time.value
    		                  ^^^^^^^^^^^^
SyntaxError: invalid syntax

